--- a/Day-13/Cookie Section/assets/styles/cookie.css
+++ b/Day-13/Cookie Section/assets/styles/cookie.css
@@ -29,6 +29,7 @@
 body {
   background-color: var(--bg-main);
   letter-spacing: 0.5;
+  outline: none;
 }
 /* default */
 a,
@@ -51,6 +52,7 @@ ul {
 /* quick */
 .container {
   width: 100%;
+  min-width: 462px;
   max-width: 1500px;
   padding: 120px 20px 20px 20px;
   margin-inline: auto;
@@ -190,13 +192,12 @@ ul {
 /* row-2 */
 .r-middle-wrap,
 .r-bottom-wrap {
-  /* min-height: auto;
-  max-height: 285px; */
   position: relative;
   z-index: -2;
 }
 .r-middle-wrap img,
 .r-bottom-wrap img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
   z-index: -1;
