--- a/Day-13/Cookie Section/assets/styles/cookie.css
+++ b/Day-13/Cookie Section/assets/styles/cookie.css
@@ -165,14 +165,19 @@ h3 {
 
 /* l-bottom */
 .l-bottom-wrap {
-  background-color: var(--bg-secondary);
   align-items: center;
 }
 .l-bottom-wrap h2 a {
+  background-color: var(--bg-secondary);
   font-family: var(--font-family);
   color: var(--font-secondary);
   font-size: 28px;
   padding: 40px 0;
+  transition: all 0.3s ease;
+}
+.l-bottom-wrap h2 a:hover {
+  color: var(--bg-secondary);
+  background-color: var(--bg-primary);
 }
 
 /* right-content */
@@ -258,7 +263,7 @@ h3 {
   transition: all 0.3s ease;
 }
 .action-arrow-wrap .arrow:hover i {
-  transform: scale(1.2);
+  transform: scale(1.3);
 }
 /* row-3 */
 .r-bottom-wrap {
