--- a/Day-13/Cookie Section/assets/styles/cookie.css
+++ b/Day-13/Cookie Section/assets/styles/cookie.css
@@ -111,21 +111,30 @@ h3 {
   height: 150px;
   border-radius: 50%;
   overflow: hidden;
+  transition: all 0.4s ease;
 }
 .profile-wrap img {
   width: 100%;
   height: auto;
   object-fit: cover;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease;
 }
 .profile-wrap img:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
+}
+.profile-wrap:hover {
+  box-shadow: var(--bg-secondary) 0px 0px 40px 1px;
 }
 /* title */
-.l-top-wrap span {
+.l-top-wrap span a {
   margin-top: 12px;
+  padding: 6px;
   font-family: var(--font-family-des);
   color: var(--font-primary-subtle);
+  transition: all 0.3s ease;
+}
+.l-top-wrap span a:hover {
+  color: var(--font-primary);
 }
 .l-top-wrap h1 {
   font-family: var(--font-family);
@@ -215,6 +224,8 @@ h3 {
 .r-bottom-wrap {
   position: relative;
   z-index: -2;
+  cursor: pointer;
+  overflow: hidden;
 }
 .r-middle-wrap img,
 .r-bottom-wrap img {
@@ -222,6 +233,12 @@ h3 {
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+.img-static img {
+  transition: all 0.4s ease-in-out;
+}
+.img-static img:hover {
+  transform: scale(1.1);
 }
 .overlay::after {
   content: " ";
@@ -231,7 +248,11 @@ h3 {
   left: 0;
   background-color: var(--bg-secondary-subtle);
   position: absolute;
+  transition: all 0.4s ease-in-out;
   z-index: 0;
+}
+.overlay:hover::after {
+  background-color: var(--bg-secondary);
 }
 .overlay-content {
   position: absolute;
