--- a/Day-15/Cube-Animation/assets/styles/cube-animation.css
+++ b/Day-15/Cube-Animation/assets/styles/cube-animation.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: black;
+}
 .container {
   width: 100%;
   height: 100%;
@@ -58,7 +61,7 @@ h1 {
     border-radius: 50%;
     transform: rotate(360deg);
     border: 6px solid darkslateblue;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 20px inset;
+    box-shadow: 0 0 30px 5px rgba(0, 0, 255, 0.8);
   }
 }
 h2 {
@@ -66,7 +69,7 @@ h2 {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   animation: text 1600ms ease-out forwards;
-  color: #414141;
+  color: black;
 }
 @keyframes text {
   0% {
