--- a/Day-16/CSS-Page/assets/styles/css-page.css
+++ b/Day-16/CSS-Page/assets/styles/css-page.css
@@ -250,18 +250,33 @@ nav ul li a:hover::after {
   margin-bottom: 16px;
   overflow: hidden;
 }
-.tags-wrap {
-  flex-direction: row;
-  gap: 18px;
-  margin-left: 18px;
-  cursor: move;
-  overflow-x: scroll;
-}
 .hero-tags-wrap h3 {
   text-wrap: nowrap;
   font-size: 22px;
 }
-.hero-tags-wrap span {
+.tags-wrap {
+  flex-direction: row;
+  gap: 18px;
+  margin-left: 18px;
+  cursor: pointer;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  border-radius: 15px;
+  background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(0, 0, 0, 0.1) 30%,
+      rgba(255, 255, 255, 0.5) 500%
+    ),
+    linear-gradient(
+      to left,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(0, 0, 0, 0.1) 30%,
+      rgba(255, 255, 255, 0.5) 500%
+    );
+  box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.2);
+}
+.tags-wrap span {
   color: var(--bg-dark);
   padding: 6px 12px;
   font-size: 12px;
