--- a/Day-30-JS/Form-HTML/assets/styles/form.css
+++ b/Day-30-JS/Form-HTML/assets/styles/form.css
@@ -219,6 +219,11 @@ header {
 }
 
 /* main content */
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
 .content-wrap {
   padding: 16px;
   max-width: 350px;
@@ -307,13 +312,12 @@ header {
 }
 .invalidField {
   opacity: 0;
-  margin-left: 30px;
   color: rgba(255, 255, 255, 0.8);
   font-size: 12px;
   transition: all 0.3s ease;
 }
 #btnSubmit {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 @media (max-width: 475px) {
   .content-wrap {
