--- a/Extra/Tabs/assets/styles/tabs.css
+++ b/Extra/Tabs/assets/styles/tabs.css
@@ -19,7 +19,7 @@ body {
     50% no-repeat;
   background-blend-mode: overlay;
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
   color: #333;
   display: flex;
   justify-content: center;
@@ -48,8 +48,9 @@ body {
   background-color: transparent;
   color: #fff;
   font-size: 16px;
+  font-weight: 300;
   cursor: pointer;
-  transition: all 0.4s ease;
+  transition: all 0.5s ease-in-out;
 }
 
 .tab-button:hover {
@@ -58,7 +59,7 @@ body {
 
 .tab-button.active {
   background-color: rgb(55, 0, 179);
-  font-weight: bold;
+  font-weight: 600;
   box-shadow: rgba(55, 0, 179, 0.5) 0px 3px 40px;
 }
 
@@ -69,7 +70,7 @@ body {
 .tab-pane {
   display: none;
   opacity: 0;
-  transition: opacity 0.6s ease;
+  transition: opacity 0.6s ease-in-out;
 }
 
 .tab-pane.active {
@@ -85,7 +86,8 @@ body {
   transition: all 0.6s ease-in-out;
 }
 .tab-pane.active h2 {
-  font-family: cursive;
+  font-family: fantasy;
+  letter-spacing: 1px;
   transform: translateX(0px);
   opacity: 1;
 }
@@ -105,7 +107,7 @@ body {
   opacity: 0;
   object-fit: cover;
   border-radius: 10px;
-  transition: all 0.6s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .tab-pane.active .poster img {
@@ -126,7 +128,7 @@ body {
   transition: all 0.4s ease;
   opacity: 0;
   animation: zoomInOut 1.5s linear infinite alternate;
-  transition: all 0.4s ease;
+  transition: all 0.4s ease-in-out;
 }
 
 .tab-pane.active .cta {
@@ -154,7 +156,6 @@ body {
     right: 28%;
   }
 }
-
 
 @keyframes zoomInOut {
   0% {
