--- a/Day-33-JS/assets/styles/product.css
+++ b/Day-33-JS/assets/styles/product.css
@@ -14,6 +14,11 @@
   --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+input::placeholder {
+  letter-spacing: 0.5px;
+  font-weight: 600;
+}
+
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--background-color);
