--- a/Day-36-JS/Toggle Dark Mode/assets/styles/home-repair.css
+++ b/Day-36-JS/Toggle Dark Mode/assets/styles/home-repair.css
@@ -28,7 +28,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-.darkMode {
+.darkmode {
   --bg-dark: rgb(255, 255, 255);
   --bg-light: rgb(42, 45, 51);
   --font-dark: rgb(255, 255, 255);
@@ -59,6 +59,8 @@ a {
 .container {
   width: 100%;
   min-width: 376px;
+  height: 100%;
+  min-height: 100dvh;
   padding: 60px;
   margin-inline: auto;
   text-align: center;
@@ -101,9 +103,17 @@ a {
   opacity: 1;
   visibility: visible;
 }
+.darkmode .btn-toggle-wrap i:first-child {
+  opacity: 0;
+  visibility: hidden;
+}
 .btn-toggle-wrap i:last-child {
   opacity: 0;
   visibility: hidden;
+}
+.darkmode .btn-toggle-wrap i:last-child {
+  opacity: 1;
+  visibility: visible;
 }
 
 /* home-repair */
