--- a/Day-38-JS/CustomEvents/assets/styles/custom_events.css
+++ b/Day-38-JS/CustomEvents/assets/styles/custom_events.css
@@ -49,7 +49,7 @@ form button {
 }
 .contentBox {
   width: 100%;
-  height: 200px;
+  min-height: 100px;
   color: whitesmoke;
   padding: 16px;
   border-radius: 8px;
