Day-39 Geolocation API in Javascript

--- a/Day-39-JS/Geolocation API/assets/styles/geolocation.css
+++ b/Day-39-JS/Geolocation API/assets/styles/geolocation.css
@@ -35,13 +35,14 @@ body {
 .access-denied {
   position: absolute;
   margin-top: 16px;
-  top: 0;
+  top: -80px;
   left: 50%;
   background-color: var(--card-bg-color);
   padding: 6px 12px;
   border: 2px solid var(--secondary-color);
   border-radius: 8px;
   transform: translateX(-50%);
+  transition: all 0.4s ease;
 }
 
 .access-denied span {
@@ -59,7 +60,7 @@ body {
 
 .wrapper {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   background: var(--card-bg-color);
   padding: 2rem;
   border-radius: 12px;
@@ -90,9 +91,12 @@ h1 {
 
 .coord-display {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
-  font-size: 18px;
+  gap: 8px;
+  font-size: 14px;
 }
 
 .label {
