Day-39 Geolocation API in Javascript

--- a/Day-39-JS/Geolocation API/assets/styles/geolocation.css
+++ b/Day-39-JS/Geolocation API/assets/styles/geolocation.css
@@ -7,8 +7,9 @@
   --secondary-color: #cdc7e5;
   --secondary-color-rgb: rgba(205, 199, 229);
   --card-bg-color: #7776bc;
-  --card-bg-color-rgb: rgba(119, 118, 188);
-  --text-color: #ffffff;
+  --card-bg-color-rgb: rgba(119, 118, 188, 0.7);
+  --text-color-dark: #333;
+  --text-color-light: #fff;
 }
 
 * {
@@ -20,16 +21,19 @@
 
 body {
   position: relative;
-  background: linear-gradient(
+  /* background: linear-gradient(
     to right,
     var(--primary-color),
     var(--secondary-color)
-  );
-  color: var(--text-color);
+  ); */
+  color: var(--text-color-dark);
+  height: 100vh;
+}
+
+.finisher-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .access-denied {
@@ -38,8 +42,9 @@ body {
   top: -80px;
   left: 50%;
   background-color: var(--card-bg-color);
+  color: var(--text-color-light);
   padding: 6px 12px;
-  border: 2px solid var(--secondary-color);
+  border: 1px solid var(--secondary-color);
   border-radius: 8px;
   transform: translateX(-50%);
   transition: all 0.4s ease;
@@ -61,7 +66,7 @@ body {
 .wrapper {
   width: 100%;
   max-width: 500px;
-  background: var(--card-bg-color);
+  background: var(--primary-color);
   padding: 2rem;
   border-radius: 12px;
   text-align: center;
@@ -74,8 +79,8 @@ h1 {
 }
 
 .btn-coord {
-  background: var(--primary-color);
-  color: var(--card-bg-color);
+  background: var(--card-bg-color);
+  color: var(--text-color-light);
   border: none;
   padding: 12px 18px;
   font-size: 16px;
@@ -87,6 +92,7 @@ h1 {
 
 .btn-coord:hover {
   background: var(--secondary-color);
+  color: var(--text-color-dark);
 }
 
 .coord-display {
